force-app/main/default/objects/Deal_Contact__c/Deal_Contact__c.object-meta.xml
<CustomObject>
    <label>Deal Contact</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Deal Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>