force-app/main/default/objects/Deal_Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <filterItems>
            <field>Account.Account_Status__c</field>
            <operation>equals</operation>
            <value>Active CoreVest Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Entities</relationshipLabel>
    <relationshipName>Deal_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>