force-app/main/default/objects/Deal_Contact__c/fields/Account_Entity__c.field-meta.xml
<CustomField>
    <fullName>Account_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Deals and Accounts</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>