force-app/main/default/objects/Deal_Contact__c/fields/Annual_Income_2_Years_Ago__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income_2_Years_Ago__c</fullName>
    <label>Annual Income 2 Years Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>