force-app/main/default/objects/Deal_Contact__c/fields/Annual_Income_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income_Last_Year__c</fullName>
    <label>Annual Income Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>