force-app/main/default/objects/Deal_Contact__c/fields/Background_Risk_Number__c.field-meta.xml
<CustomField>
    <fullName>Background_Risk_Number__c</fullName>
    <description>Risk Number that coms from the Clear Background Check</description>
    <inlineHelpText>Risk Number that coms from the Clear Background Check</inlineHelpText>
    <label>Background Risk Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>