force-app/main/default/objects/Deal_Contact__c/fields/Borrower_Provided_FICO__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Provided_FICO__c</fullName>
    <description>This is the FICO provided by the Borrower</description>
    <inlineHelpText>This is the FICO provided by the Borrower</inlineHelpText>
    <label>Borrower Provided FICO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>