force-app/main/default/objects/Deal_Contact__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Entity</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Deal Contacts</relationshipLabel>
    <relationshipName>Deal_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>