force-app/main/default/objects/Deal_Contact__c/fields/C_Account__c.field-meta.xml
<CustomField>
    <fullName>C_Account__c</fullName>
    <description>Contact Info</description>
    <formula>Deal__r.Account_Name__c</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>