force-app/main/default/objects/Deal_Contact__c/fields/C_Email__c.field-meta.xml
<CustomField>
    <fullName>C_Email__c</fullName>
    <description>Pulling contact data</description>
    <formula>Contact__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>