force-app/main/default/objects/Deal_Contact__c/fields/C_Experian__c.field-meta.xml
<CustomField>
    <fullName>C_Experian__c</fullName>
    <description>Score from Contact Details</description>
    <formula>Contact__r.Experian__c</formula>
    <label>Contact Experian</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>