force-app/main/default/objects/Deal_Contact__c/fields/C_Phone__c.field-meta.xml
<CustomField>
    <fullName>C_Phone__c</fullName>
    <description>Pulling Contact Info</description>
    <formula>Contact__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>