force-app/main/default/objects/Deal_Contact__c/fields/C_Transunion__c.field-meta.xml
<CustomField>
    <fullName>C_Transunion__c</fullName>
    <description>Score from Contact Details</description>
    <formula>Contact__r.TransUnion__c</formula>
    <label>Contact Transunion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>