force-app/main/default/objects/Deal_Contact__c/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <formula>text(Deal__r.Cash_Management__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Management</label>
    <type>Text</type>
</CustomField>