force-app/main/default/objects/Deal_Contact__c/fields/Cash_Position__c.field-meta.xml
<CustomField>
    <fullName>Cash_Position__c</fullName>
    <label>Cash Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>