force-app/main/default/objects/Deal_Contact__c/fields/Cash_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Cash_Reserve__c</fullName>
    <label>Cash Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>