force-app/main/default/objects/Deal_Contact__c/fields/Cash_Reserve_Pct__c.field-meta.xml
<CustomField>
    <fullName>Cash_Reserve_Pct__c</fullName>
    <formula>Cash_Reserve__c / Deal__r.LOC_Commitment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Reserve %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>