force-app/main/default/objects/Deal_Contact__c/fields/Cash_Reserve_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Cash_Reserve_Requirement__c</fullName>
    <label>Cash Reserve Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>