force-app/main/default/objects/Deal_Contact__c/fields/Clear_Result__c.field-meta.xml
<CustomField>
    <fullName>Clear_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clear Result</label>
    <referenceTo>Clear_Result__c</referenceTo>
    <relationshipLabel>Deal Contacts</relationshipLabel>
    <relationshipName>Deal_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>