force-app/main/default/objects/Deal_Contact__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <formula>Deal__r.Closer__r.FirstName + &quot; &quot; + Deal__r.Closer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closer</label>
    <type>Text</type>
</CustomField>