force-app/main/default/objects/Deal_Contact__c/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <description>SAB Use</description>
    <label>Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>