force-app/main/default/objects/Deal_Contact__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <description>Contact ID for data clean up</description>
    <formula>Contact__r.Id</formula>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>