force-app/main/default/objects/Deal_Contact__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <description>Title of this contact</description>
    <inlineHelpText>Title of this contact</inlineHelpText>
    <label>Contact Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>