force-app/main/default/objects/Deal_Contact__c/fields/Credit_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Date__c</fullName>
    <description>Date the credit was ran in relation to this Deal</description>
    <inlineHelpText>Date the credit was ran in relation to this Deal</inlineHelpText>
    <label>Credit Score Date</label>
    <type>Date</type>
</CustomField>