force-app/main/default/objects/Deal_Contact__c/fields/Days_in_UW__c.field-meta.xml
<CustomField>
    <fullName>Days_in_UW__c</fullName>
    <formula>Deal__r.Days_In_Underwriting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>