force-app/main/default/objects/Deal_Contact__c/fields/Deal_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Contact_Type__c</fullName>
    <label>Deal Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>