force-app/main/default/objects/Deal_Contact__c/fields/Deal_is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Deal_is_Closed__c</fullName>
    <formula>Deal__r.IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal is Closed</label>
    <type>Checkbox</type>
</CustomField>