force-app/main/default/objects/Deal_Contact__c/fields/Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Name__c</fullName>
    <formula>Deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Name</label>
    <type>Text</type>
</CustomField>