force-app/main/default/objects/Deal_Contact__c/fields/Disable_Apex__c.field-meta.xml
<CustomField>
    <fullName>Disable_Apex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Apex</label>
    <type>Checkbox</type>
</CustomField>