force-app/main/default/objects/Deal_Contact__c/fields/Equifax__c.field-meta.xml
<CustomField>
    <fullName>Equifax__c</fullName>
    <label>Equifax</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>