force-app/main/default/objects/Deal_Contact__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>Number of Projects</description>
    <label>Number of Projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>