force-app/main/default/objects/Deal_Contact__c/fields/Formation_Documents__c.field-meta.xml
<CustomField>
    <fullName>Formation_Documents__c</fullName>
    <label>Formation Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignment Affidavit</fullName>
            </value>
            <value>
                <fullName>Assign of Leases</fullName>
            </value>
            <value>
                <fullName>Assign of Leases - CA</fullName>
            </value>
            <value>
                <fullName>Assign of Leases - PA</fullName>
            </value>
            <value>
                <fullName>Cert of Borrower</fullName>
            </value>
            <value>
                <fullName>Cert of Occupancy</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION Guaranty</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION Loan Agreement</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION Loan Agreement w/interest reserve</fullName>
            </value>
            <value>
                <fullName>DOT - AR</fullName>
            </value>
            <value>
                <fullName>DOT - AZ</fullName>
            </value>
            <value>
                <fullName>DOT - CA</fullName>
            </value>
            <value>
                <fullName>DOT - CO</fullName>
            </value>
            <value>
                <fullName>DOT - CT</fullName>
            </value>
            <value>
                <fullName>DOT - DC</fullName>
            </value>
            <value>
                <fullName>DOT - FL - BORROWER IS ENTITY</fullName>
            </value>
            <value>
                <fullName>DOT - FL - BORROWER IS PERSON</fullName>
            </value>
            <value>
                <fullName>DOT - GA</fullName>
            </value>
            <value>
                <fullName>DOT - HI - BORROWER IS ENTITY</fullName>
            </value>
            <value>
                <fullName>DOT - HI - BORROWER IS PERSON</fullName>
            </value>
            <value>
                <fullName>DOT - ID</fullName>
            </value>
            <value>
                <fullName>DOT - IL - BORROWER IS ENTITY</fullName>
            </value>
            <value>
                <fullName>DOT - IL - BORROWER IS PERSON</fullName>
            </value>
            <value>
                <fullName>DOT - KY</fullName>
            </value>
            <value>
                <fullName>DOT - MA - ENTITY</fullName>
            </value>
            <value>
                <fullName>DOT - MA - PERSON</fullName>
            </value>
            <value>
                <fullName>DOT - MD</fullName>
            </value>
            <value>
                <fullName>DOT - MI - BORROWER IS ENTITY</fullName>
            </value>
            <value>
                <fullName>DOT - MI - BORROWER IS PERSON</fullName>
            </value>
            <value>
                <fullName>DOT - NC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>