force-app/main/default/objects/Deal_Contact__c/fields/Is_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Is_Guarantor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the Add Guarantor Action on the Deal</description>
    <label>Is Guarantor</label>
    <type>Checkbox</type>
</CustomField>