force-app/main/default/objects/Deal_Contact__c/fields/Is_User__c.field-meta.xml
<CustomField>
    <fullName>Is_User__c</fullName>
    <formula>OR(
$User.Full_Name__c =  Loan_Coordinator__c,
$User.Full_Name__c =  Underwriter__c,
$User.Full_Name__c =  Closer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User</label>
    <type>Checkbox</type>
</CustomField>