force-app/main/default/objects/Deal_Contact__c/fields/Loan_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Loan_Coordinator__c</fullName>
    <formula>Deal__r.Loan_Coordinator__r.FirstName + &quot; &quot; + Deal__r.Loan_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Manager</label>
    <type>Text</type>
</CustomField>