force-app/main/default/objects/Deal_Contact__c/fields/Middle_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Middle_Credit_Score__c</fullName>
    <description>Middle number of Experian, Equifax, &amp; TransUnion credit scores</description>
    <formula>IF(  
    OR ( AND( Experian__c &gt;= Equifax__c, TransUnion__c &lt;= Equifax__c ) , AND( TransUnion__c &gt;= Equifax__c, Experian__c &lt;= Equifax__c) ),
    Equifax__c,
    IF(
       OR ( AND( Equifax__c &gt;= Experian__c, TransUnion__c &lt;= Experian__c ) , AND( TransUnion__c &gt;= Experian__c, Equifax__c &lt;= Experian__c) ),
       Experian__c,
       TransUnion__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Middle number of Experian, Equifax, &amp; TransUnion credit scores</inlineHelpText>
    <label>Middle Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>