force-app/main/default/objects/Deal_Contact__c/fields/Monthly_Interest_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Interest_Payment__c</fullName>
    <formula>(Deal__r.LOC_Commitment__c / Deal__r.Rate__c) / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Interest Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>