force-app/main/default/objects/Deal_Contact__c/fields/Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth__c</fullName>
    <label>Net Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>