force-app/main/default/objects/Deal_Contact__c/fields/No_of_Months_Liquidity__c.field-meta.xml
<CustomField>
    <fullName>No_of_Months_Liquidity__c</fullName>
    <formula>IF(Cash_Reserve__c &gt; 0 &amp;&amp; Monthly_Interest_Payment__c&gt;0,
(Cash_Reserve__c / Monthly_Interest_Payment__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Months Liquidity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>