force-app/main/default/objects/Deal_Contact__c/fields/Operating_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Operating_Agreement_Date__c</fullName>
    <description>Operating Agreement Date related to the entity filing</description>
    <inlineHelpText>Operating Agreement Date related to the entity filing</inlineHelpText>
    <label>Operating Agreement Date</label>
    <type>Date</type>
</CustomField>