force-app/main/default/objects/Deal_Contact__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <description>Payment Reference to be entered when generating Closing Loan Documents/Schedule of Lender Costs</description>
    <inlineHelpText>Payment Reference/Invoice #</inlineHelpText>
    <label>Payment Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>