force-app/main/default/objects/Deal_Contact__c/fields/Percentage_Owned__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Owned__c</fullName>
    <label>Percentage Owned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>