force-app/main/default/objects/Deal_Contact__c/fields/Primary_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Guarantor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Guarantor</label>
    <type>Checkbox</type>
</CustomField>