force-app/main/default/objects/Deal_Contact__c/fields/Quotes_Requested__c.field-meta.xml
<CustomField>
    <fullName>Quotes_Requested__c</fullName>
    <description>Date the quotes were requested from the Title company
Term Use</description>
    <label>Quotes Requested</label>
    <type>Date</type>
</CustomField>