force-app/main/default/objects/Deal_Contact__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>Deal Record Type Dev Name</description>
    <formula>Deal__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deal Record Type Dev Name</inlineHelpText>
    <label>Deal Record Type Dev Name</label>
    <type>Text</type>
</CustomField>