force-app/main/default/objects/Deal_Contact__c/fields/Recourse__c.field-meta.xml
<CustomField>
    <fullName>Recourse__c</fullName>
    <formula>text(Deal__r.Recourse__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recourse</label>
    <type>Text</type>
</CustomField>