force-app/main/default/objects/Deal_Contact__c/fields/Regulatory_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Recognition__c</fullName>
    <label>Regulatory Recognition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>