force-app/main/default/objects/Deal_Contact__c/fields/Required_Signer__c.field-meta.xml
<CustomField>
    <fullName>Required_Signer__c</fullName>
    <label>Required Signer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>