force-app/main/default/objects/Deal_Contact__c/fields/SoftPull_Report_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>SoftPull_Report_Generated_Date__c</fullName>
    <label>SoftPull Report Generated Date</label>
    <type>Date</type>
</CustomField>